# restate-opendal

./: .dockerignore  Cargo.toml  Dockerfile  README.md  devenv.nix
.github/workflows/: analysis-scorecard.yaml  ci-nix.yaml  ci.yaml  release.yaml
lib/: Cargo.toml
lib/src/: error.rs  factory.rs  lib.rs  service.rs  service_common.rs  service_dynamic.rs  service_extra.rs  service_scoped.rs
