[package]
name = "restate-opendal"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
content_disposition = "0.4.0"
futures = "0.3"
http = "1.4.0"
humantime-serde = { workspace = true }
jiff = "0.2.18"
opendal = { workspace = true, features = [ "services-memory" ] }
opendal-util = { workspace = true }
paste = "1.0.15"
restate-sdk = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-path = "0.12.3"
url = { workspace = true }
